--- a/report.qmd
+++ b/report.qmd
@@ -465,12 +465,6 @@ some variables in this data:
 
 ```{r tourism}
 load("data/tourism.rda")
-
-# Suggested way to clean data
-# tourism <- tourism %>% 
-#  janitor::clean_names() %>% 
-#  mutate(region = as.factor(region),
-#         rurpose = as.factor(purpose))
 ```
 
 | Variables | Description                                                                        |
@@ -478,7 +472,7 @@ load("data/tourism.rda")
 | Quarter   | The Year and Quarter when the trips happened                                       |
 | Region    | The Region where the people going to. Region is equivalent to Statistical Area 2.  |
 | Purpose   | The reason of the trips (Business, Holiday, Other).                                |
-| Trips     | Number of people doing the trip (divide by 1000).                                                   |
+| Trips     | Number of people doing the trip.                                                   |
 
 : Tourism Data
 
@@ -526,6 +520,7 @@ wmm_region <-
   st_join(AU_region, wmm_sf, left = TRUE) %>%  # spatial join to get intersection of points and poly
   filter(!is.na(region), # get only the points (sightings) that fall in the polygon (tourism region)
          !is.na(eventDate)) # filter out the NA values that represents mismatch geometry with Occurences data
+
 ```
 
 ##### Join Temporal and Spatial Data
@@ -534,6 +529,75 @@ Now, our Occurence data has matching region name with the region in the Tourism 
 ```{r joined_data, warning = false, message = false}
 wmm_tourism <- wmm_region %>%
                 left_join(tourism, by = c("region" = "Region", "Year_Quarter" = "Quarter"))
+```
+
+
+#### Temporal analysis of the seasonal patterns to understand if they are increasing or decreasing.
+
+```{r , warning = FALSE , message = FALSE}
+library(ggplot2)
+
+# Filter out "Total" and NA values in the "Purpose" column
+filtered_data <- wmm_tourism %>%
+  filter(!Purpose %in% c("Total", NA))
+
+# Group by Year_Quarter and Purpose, and calculate the total trips
+temporal_analysis <- filtered_data %>%
+  group_by(Year_Quarter, Purpose) %>%
+  summarise(Total_Trips = sum(Trips, na.rm = TRUE)) %>%
+  ungroup()
+
+# Calculate the moving average and seasonal component
+temporal_analysis <- temporal_analysis %>%
+  group_by(Purpose) %>%
+  mutate(Moving_Average = zoo::rollmean(Total_Trips, k = 4, fill = NA)) %>%
+  mutate(Seasonal_Component = Total_Trips - Moving_Average) %>%
+  ungroup()
+
+# Create a plot to visualize the seasonal trend
+ggplot(temporal_analysis, aes(x = Year_Quarter, y = Seasonal_Component, color = Purpose)) +
+  geom_line() +
+  labs(title = "Seasonal Trend Analysis by Purpose",
+       x = "Year and Quarter",
+       y = "Seasonal Component") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  facet_wrap(~ Purpose) +
+  scale_color_brewer(palette = "Set1") +
+  coord_cartesian(expand = FALSE)
+
+
+```
+
+
+```{r}
+# Load the necessary libraries
+library(ggplot2)
+library(dplyr)
+
+# Create a time series plot for the "Trips" variable
+wmm_tourism %>%
+  group_by(Year_Quarter) %>%
+  summarise(Total_Trips = sum(Trips)) %>%
+  ggplot(aes(x = Year_Quarter, y = Total_Trips)) +
+  geom_line() +
+  labs(title = "Tourist Trips Over Time",
+       x = "Year and Quarter",
+       y = "Total Trips") +
+  theme_minimal()
+
+
+wmm_tourism %>%
+  group_by(Year_Quarter, Purpose) %>%
+  summarise(Total_Trips = sum(Trips)) %>%
+  ggplot(aes(x = Year_Quarter, y = Total_Trips, color = Purpose)) +
+  geom_line() +
+  labs(title = "Tourist Trips Over Time by Purpose",
+       x = "Year and Quarter",
+       y = "Total Trips",
+       color = "Purpose") +
+  theme_minimal()
+
 ```
 
 ## Exploratory data analysis
@@ -970,6 +1034,7 @@ to warmer weather in the lower figure. We also consider the possibility
 that the mentality effect of *"the weather is getting warmer"* enables a
 greater inclination in people for outdoor ventures - increasing the
 sighting frequency of the plant.
+
 
 ## Tourism Exploratory
 
